[gd_scene load_steps=43 format=3 uid="uid://7blqfr6i1rfj"]

[ext_resource type="Script" path="res://Scenes/Objects/Environment/Toggleables/Traps/spin_trap.gd" id="1_fi858"]
[ext_resource type="Texture2D" uid="uid://cci34tu340nh1" path="res://Art/Environment/Objects/wall_blades.png" id="1_jbhcw"]
[ext_resource type="AudioStream" uid="uid://cy65sariikr36" path="res://Audio/Objects/Traps/Laser Trap/laserchargeNEW.mp3" id="7_51p5y"]
[ext_resource type="AudioStream" uid="uid://bhy00yhx6na7x" path="res://Audio/Objects/Traps/Laser Trap/laserfire.mp3" id="8_hjflv"]
[ext_resource type="PackedScene" uid="uid://dklu45t3cxodm" path="res://Scenes/Components/Environment/damaging_zone.tscn" id="8_ljyaf"]
[ext_resource type="Script" path="res://Scenes/Components/Universal/identifier.gd" id="8_lvlc5"]
[ext_resource type="AudioStream" uid="uid://b1qkth1vm8h63" path="res://Audio/Objects/Traps/Laser Trap/laser repeat hopefully.mp3" id="9_6p3r4"]
[ext_resource type="PackedScene" uid="uid://b18jambxofrj0" path="res://Scenes/Components/Environment/pressure_activator.tscn" id="9_31xro"]
[ext_resource type="PackedScene" uid="uid://c34mfqhn2vlcn" path="res://Scenes/Components/Environment/power_controller.tscn" id="10_f6mw8"]
[ext_resource type="AudioStream" uid="uid://cjm41y1w5y4lv" path="res://Audio/Objects/Traps/Laser Trap/laser disengage.mp3" id="10_oimwk"]
[ext_resource type="PackedScene" uid="uid://cywuss6hgdpb7" path="res://Scenes/Components/Universal/timer_component.tscn" id="11_oo3lx"]
[ext_resource type="Texture2D" uid="uid://b51jc1bwxk3j3" path="res://Resources/Gradients/basic light.tres" id="11_vr51t"]

[sub_resource type="AtlasTexture" id="AtlasTexture_b3seq"]
atlas = ExtResource("1_jbhcw")
region = Rect2(640, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_3hihw"]
atlas = ExtResource("1_jbhcw")
region = Rect2(1280, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_3q1dr"]
atlas = ExtResource("1_jbhcw")
region = Rect2(1408, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_lfxvx"]
atlas = ExtResource("1_jbhcw")
region = Rect2(1536, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_ya602"]
atlas = ExtResource("1_jbhcw")
region = Rect2(1664, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_vuro0"]
atlas = ExtResource("1_jbhcw")
region = Rect2(1792, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_4wqdv"]
atlas = ExtResource("1_jbhcw")
region = Rect2(1920, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_uk4eo"]
atlas = ExtResource("1_jbhcw")
region = Rect2(2048, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_ua20p"]
atlas = ExtResource("1_jbhcw")
region = Rect2(2176, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_havuf"]
atlas = ExtResource("1_jbhcw")
region = Rect2(2304, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_g7kqd"]
atlas = ExtResource("1_jbhcw")
region = Rect2(2432, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_wg6k1"]
atlas = ExtResource("1_jbhcw")
region = Rect2(2432, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_r0bg5"]
atlas = ExtResource("1_jbhcw")
region = Rect2(2560, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_ni4wa"]
atlas = ExtResource("1_jbhcw")
region = Rect2(2688, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_355cr"]
atlas = ExtResource("1_jbhcw")
region = Rect2(2816, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_58t7k"]
atlas = ExtResource("1_jbhcw")
region = Rect2(2944, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_s0oj3"]
atlas = ExtResource("1_jbhcw")
region = Rect2(2176, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_akt8l"]
atlas = ExtResource("1_jbhcw")
region = Rect2(2304, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_3eu46"]
atlas = ExtResource("1_jbhcw")
region = Rect2(2432, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_vu6ga"]
atlas = ExtResource("1_jbhcw")
region = Rect2(3200, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_6u4qa"]
atlas = ExtResource("1_jbhcw")
region = Rect2(3328, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_iadrc"]
atlas = ExtResource("1_jbhcw")
region = Rect2(3456, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_1c6ks"]
atlas = ExtResource("1_jbhcw")
region = Rect2(3584, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_lsb02"]
atlas = ExtResource("1_jbhcw")
region = Rect2(0, 0, 128, 128)

[sub_resource type="SpriteFrames" id="SpriteFrames_d543x"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_b3seq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3hihw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3q1dr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lfxvx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ya602")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vuro0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4wqdv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uk4eo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ua20p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_havuf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g7kqd")
}],
"loop": false,
"name": &"activate",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_wg6k1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r0bg5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ni4wa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_355cr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_58t7k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s0oj3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_akt8l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3eu46")
}],
"loop": true,
"name": &"activeloop",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_vu6ga")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6u4qa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iadrc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1c6ks")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lsb02")
}],
"loop": false,
"name": &"deactivate",
"speed": 10.0
}]

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_kfuvf"]
streams_count = 1
random_pitch = 1.05
random_volume_offset_db = 0.0
stream_0/stream = ExtResource("8_hjflv")
stream_0/weight = 1.0

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_gyo12"]
streams_count = 1
random_pitch = 1.05
random_volume_offset_db = 0.0
stream_0/stream = ExtResource("9_6p3r4")
stream_0/weight = 1.0

[sub_resource type="CircleShape2D" id="CircleShape2D_ushgl"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jd6kl"]
size = Vector2(83, 132)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qj5qn"]
size = Vector2(121, 132)

[node name="SpinTrap" type="Node2D"]
script = ExtResource("1_fi858")
always_on = false

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
unique_name_in_owner = true
sprite_frames = SubResource("SpriteFrames_d543x")
animation = &"activate"
autoplay = "deactivate"
frame = 10
frame_progress = 1.0

[node name="ChargeSound" type="AudioStreamPlayer2D" parent="."]
unique_name_in_owner = true
stream = ExtResource("7_51p5y")
volume_db = 3.036
max_distance = 1000.0
attenuation = 1.62451
panning_strength = 3.0
bus = &"Sounds"

[node name="FireSound" type="AudioStreamPlayer2D" parent="."]
unique_name_in_owner = true
stream = SubResource("AudioStreamRandomizer_kfuvf")
max_distance = 1000.0
attenuation = 1.62451
panning_strength = 3.0
bus = &"Sounds"

[node name="LoopSound" type="AudioStreamPlayer2D" parent="."]
unique_name_in_owner = true
stream = SubResource("AudioStreamRandomizer_gyo12")
max_distance = 1000.0
attenuation = 1.62451
panning_strength = 3.0
bus = &"Sounds"

[node name="DischargeSound" type="AudioStreamPlayer2D" parent="."]
unique_name_in_owner = true
stream = ExtResource("10_oimwk")
volume_db = 3.036
max_distance = 1000.0
attenuation = 1.62451
panning_strength = 3.0
bus = &"Sounds"

[node name="Light" type="PointLight2D" parent="."]
unique_name_in_owner = true
position = Vector2(-2, 3.8147e-06)
scale = Vector2(0.2, 0.2)
color = Color(1, 0.309804, 0.188235, 0.607843)
range_item_cull_mask = 3
shadow_enabled = true
texture = ExtResource("11_vr51t")

[node name="Identifier" type="StaticBody2D" parent="." node_paths=PackedStringArray("power_controller") groups=["danger"]]
position = Vector2(2, -2)
collision_layer = 1024
collision_mask = 0
script = ExtResource("8_lvlc5")
power_controller = NodePath("../PowerController")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Identifier"]
position = Vector2(-1, 0)
shape = SubResource("CircleShape2D_ushgl")

[node name="DamagingZone" parent="." instance=ExtResource("8_ljyaf")]

[node name="CollisionShape2D" type="CollisionShape2D" parent="DamagingZone"]
position = Vector2(-2.5, -1)
shape = SubResource("RectangleShape2D_jd6kl")

[node name="PressureActivator" parent="." instance=ExtResource("9_31xro")]

[node name="CollisionShape2D" type="CollisionShape2D" parent="PressureActivator"]
position = Vector2(0.5, -1)
shape = SubResource("RectangleShape2D_qj5qn")

[node name="PowerController" parent="." instance=ExtResource("10_f6mw8")]
activatable = true

[node name="TimerComponent" parent="." instance=ExtResource("11_oo3lx")]
